--- a/main.css
+++ b/main.css
@@ -70,16 +70,14 @@ h1 {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  align-items: center;
 }
 
 .legal-container {
   display: flex;
-  height: 10rem;
+  height: 8rem;
   width: 100%;
   background-color: rgb(82, 82, 82);
-  position: fixed;
-  left: 0;
-  bottom: 0;
   justify-content: center;
   align-items: center;
 }
