--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+/* main css */
+
 * {
   margin: 0;
   padding: 0;
@@ -6,21 +8,25 @@
 
 body {
   font-family: monospace;
+  /* background-color: rgb(102, 102, 102); */
+  background-color: rgb(224, 224, 224);
 }
 
 header {
   display: flex;
   height: 4rem;
-  background-color: rgb(82, 82, 82);
+  width: 100%;
+  background-color: rgb(0, 0, 0);
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
 .logo {
   height: auto;
-  width: 350px;
+  width: 10rem;
   justify-content: center;
 }
 
+/* mapbox css */
 .container {
   display: flex;
   justify-content: center;
@@ -29,6 +35,17 @@ header {
 h1 {
   text-align: center;
   padding: 1rem;
+  margin: 0;
+  font-family: "Brandon Grotesque", "brandon-grotesque-n7", "brandon-grotesque",
+    Helvetica, sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-style: normal;
+  line-height: 1.2;
+  margin-top: 0;
+  font-size: 18px;
+  color: #3a3a3a;
+  padding: 20px;
 }
 
 #map {
@@ -37,47 +54,148 @@ h1 {
   border-radius: 10px;
 }
 
+/* weather items css */
 #weather {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   padding: 1rem;
+  color: white;
+  padding: 20px;
+  color: #3a3a3a;
 }
 #weather1 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   padding: 1rem;
+  color: white;
+  padding: 20px;
+  color: #3a3a3a;
 }
 
 #weather2 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   padding: 1rem;
+  color: white;
+  padding: 20px;
+  color: #3a3a3a;
 }
 
 #weather3 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   padding: 1rem;
+  color: white;
+  padding: 20px;
+  color: #3a3a3a;
 }
 
 #weather4 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   padding: 1rem;
+  color: white;
+  color: #3a3a3a;
+  padding: 20px;
 }
 
 #weather5 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   padding: 1rem;
+  color: white;
+  color: #3a3a3a;
+  padding: 20px;
 }
 
 .weather-container {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  text-align: center;
   align-items: center;
 }
 
+/* footer items */
 .legal-container {
   display: flex;
+  flex-wrap: wrap;
+  text-align: center;
   height: 8rem;
   width: 100%;
-  background-color: rgb(82, 82, 82);
+  background-color: rgb(0, 0, 0);
   justify-content: center;
   align-items: center;
+  box-shadow: 3px 0px 5px rgba(0, 0, 0, 0.3);
+}
+.legal-container p {
+  color: white;
+  font-family: Helvetica, sans-serif;
+  font-size: 0.5rem;
+}
+
+@media only screen and (min-width: 686px) {
+  /* weather items css */
+  #weather {
+    font-size: 1.5rem;
+    padding: 1rem;
+    color: white;
+    padding: 20px;
+    color: #3a3a3a;
+  }
+  #weather1 {
+    font-size: 1.5rem;
+    padding: 1rem;
+    color: white;
+    padding: 20px;
+    color: #3a3a3a;
+  }
+
+  #weather2 {
+    font-size: 1.5rem;
+    padding: 1rem;
+    color: white;
+    padding: 20px;
+    color: #3a3a3a;
+  }
+
+  #weather3 {
+    font-size: 1.5rem;
+    padding: 1rem;
+    color: white;
+    padding: 20px;
+    color: #3a3a3a;
+  }
+
+  #weather4 {
+    font-size: 1.5rem;
+    padding: 1rem;
+    color: white;
+    color: #3a3a3a;
+    padding: 20px;
+  }
+
+  #weather5 {
+    font-size: 1.5rem;
+    padding: 1rem;
+    color: white;
+    color: #3a3a3a;
+    padding: 20px;
+  }
+}
+
+@media only screen and (min-width: 920px) {
+  #map {
+    height: 500px;
+    width: 90%;
+    border-radius: 10px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  #map {
+    height: 600px;
+    width: 90%;
+    border-radius: 10px;
+  }
+
+  .legal-container p {
+    color: white;
+    font-family: Helvetica, sans-serif;
+    font-size: 0.6rem;
+  }
 }
